[package]
name = "known-key-bruteforcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# performace release !
[profile.release]
lto = true

[dependencies]
base64 = "0.13.0"
hmac = "0.12.0"
sha1 = { version = "0.10.0", default-features = false }
benchmarking = "0.4.10"
chrono = "0.4.19"